--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,10 @@
-<p>header works!</p>
+<div class="header-container">
+  <div class="header-text">
+    <h2>Contacts Information</h2>
+    <p>Your list of contacts appear here. To add a new contact, click on the <br />
+      Add New Contact button.</p>
+  </div>
+  <div class="header-button">
+    <button class="add-contact-button">Add New Contact</button>
+  </div>
+</div>
