Update header button color

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -21,7 +21,7 @@
 
 .header-button .add-contact-button {
   padding: 10px 20px;
-  background-color: #c900ff;
+  background-color: #b200ff;
   color: #fff;
   border: none;
   border-radius: 50px;
