--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header-container">
   <div class="header-text">
     <h2>Contacts Information</h2>
-    <p>Your list of contacts appear here. To add a new contact, click on the <br />
+    <p>Your list of contacts appear here. To add a new contact, click on the 
       Add New Contact button.</p>
   </div>
   <div class="header-button">
