--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,8 @@
 * {
   margin: 0;
   font-family: "Roboto", sans-serif;
-  background-color: #f9f9f9;
+  background-color: #ffffff;
+  /* background-color: #f9f9f9; */
 }
 
 /* body {
