Update contacts component to listen to the event

--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -19,3 +19,5 @@
 
 <app-grid-view *ngIf="currentView === 'grid'"></app-grid-view>
 <app-list-view *ngIf="currentView === 'list'"></app-list-view>
+
+<app-new-contact *ngIf="isModalOpen"></app-new-contact>
