--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-header />
-<app-contacts />
+<app-header (openNewContactModal)="openModal()"/>
+<app-contacts [isModalOpen]="isModalOpen" (closeModal)="closeModal()"/>
 <router-outlet />
