Update new contact to emit cancel event

--- a/src/app/contacts/new-contact/new-contact.component.html
+++ b/src/app/contacts/new-contact/new-contact.component.html
@@ -15,7 +15,7 @@
           <input type="email" id="email" [(ngModel)]="contact.email" name="email" required>
         </div>
         <div class="modal-actions">
-          <button type="button" (click)="cancel()">Cancel</button>
+          <button type="button" (click)="cancelModal()">Cancel</button>
           <button type="submit">Save Changes</button>
         </div>
       </form>
