--- a/src/app/contacts/grid-view/grid-view.component.html
+++ b/src/app/contacts/grid-view/grid-view.component.html
@@ -2,7 +2,7 @@
   <div class="grid-item" *ngFor="let contact of contacts">
     <div class="icon-container">
       <img src="edit-icon.svg" alt="Edit" class="icon edit-icon">
-      <img src="delete-icon.svg" alt="Delete" class="icon delete-icon" >
+      <img src="delete-icon.svg" alt="Delete" class="icon delete-icon" (click)="deleteContact(contact.id)">
     </div>
     <h4>{{ contact.name }}</h4>
     <p>{{ contact.email }}</p>
