--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -17,7 +17,7 @@
   />
 </div>
 
-<app-grid-view *ngIf="currentView === 'grid'" [contacts]="contacts"></app-grid-view>
+<app-grid-view *ngIf="currentView === 'grid'" [contacts]="contacts" (contactDeleted)="fetchContacts()"></app-grid-view>
 <app-list-view *ngIf="currentView === 'list'" [contacts]="contacts"></app-list-view>
 
 <app-new-contact *ngIf="isModalOpen" (cancel)="closeModalAndRefresh()"   (contactAdded)="closeModalAndRefresh()"></app-new-contact>
