Implement using the @if directive

--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -17,7 +17,16 @@
   />
 </div>
 
-<app-grid-view *ngIf="currentView === 'grid'" [contacts]="contacts" (contactDeleted)="fetchContacts()"></app-grid-view>
-<app-list-view *ngIf="currentView === 'list'" [contacts]="contacts"></app-list-view>
+@if (currentView == 'grid') {
+  <app-grid-view [contacts]="contacts" (contactDeleted)="fetchContacts()"></app-grid-view>
+}
+@if (currentView == 'list') {
+  <app-list-view [contacts]="contacts"></app-list-view>
+}
+@if (isModalOpen == true) {
+  <app-new-contact (cancel)="closeModalAndRefresh()"   (contactAdded)="closeModalAndRefresh()"></app-new-contact>
+}
+<!-- <app-grid-view *ngIf="currentView === 'grid'" [contacts]="contacts" (contactDeleted)="fetchContacts()"></app-grid-view>
+<app-list-view *ngIf="currentView === 'list'" [contacts]="contacts"></app-list-view> -->
 
-<app-new-contact *ngIf="isModalOpen" (cancel)="closeModalAndRefresh()"   (contactAdded)="closeModalAndRefresh()"></app-new-contact>
+<!-- <app-new-contact *ngIf="isModalOpen" (cancel)="closeModalAndRefresh()"   (contactAdded)="closeModalAndRefresh()"></app-new-contact> -->
