Add event listeners for edit and delete buttons

--- a/src/app/contacts/list-view/list-view.component.html
+++ b/src/app/contacts/list-view/list-view.component.html
@@ -16,8 +16,8 @@
         <td>{{ contact.phone }}</td>
         <td>{{ contact.email }}</td>
         <td class="actions-column">
-          <img src="edit-icon.svg" title="Edit button" alt="Edit" class="action-icon">
-          <img src="delete-icon.svg" title="Delete button" alt="Delete" class="action-icon">
+          <img src="edit-icon.svg" title="Edit button" alt="Edit" class="action-icon" (click)="onEdit(contact)">
+          <img src="delete-icon.svg" title="Delete button" alt="Delete" class="action-icon" (click)="deleteContact(contact.id)">
         </td>
       </tr>
     </tbody>
