--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-header (openNewContactModal)="openModal()"/>
-<app-contacts [isModalOpen]="isModalOpen" (closeModal)="closeModal()"/>
+<app-contacts [isModalOpen]="isModalOpen" (closeModalEvent)="closeModal()"/>
 <router-outlet />
