--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-header (openNewContactModal)="openModal()"/>
+<!-- <app-header (openNewContactModal)="openModal()"/>
 <app-contacts [isModalOpen]="isModalOpen" (closeModalEvent)="closeModal()"/>
-<router-outlet />
+<router-outlet /> -->
+
+<router-outlet name="main"></router-outlet>
+<router-outlet></router-outlet>
